Fixed Dockerfiles and debug output on start